# image2plotter

./: .gitignore  CMakeLists.txt  README.md  image2plotter.pro
forms/: mainwindow.ui
include/: drawingLayer.hpp  drawingViewer.hpp
src/: drawingLayer.cpp  drawingViewer.cpp  drawingViewer.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  svgViewer.cpp  svgViewer.hpp
